# Shelfy

ShelfieNg/: .angular-cli.json  README.md  package.json
ShelfieNg/e2e/: app.e2e-spec.ts  app.po.ts
ShelfieNg/src/: index.html
ShelfieNg/src/app/: app-routing.module.ts  app.component.html  app.module.ts
ShelfieNg/src/app/home/: home.component.html
ShelfieNg/src/app/market/: market.component.html  market.component.scss
ShelfieNg/src/app/shelfie-tracker/: shelfie-tracker.component.html  shelfie-tracker.component.scss  shelfie-tracker.component.spec.ts  shelfie-tracker.component.ts
ShelfieNg/src/bootstrap/block-css/: blocks.css  plugins.css
ShelfieNg/src/bootstrap/css/: bootstrap.css
ShelfyDetector/: CMakeLists.txt  Detector.cpp  Detector.h  main.cpp
ShelfyPy/: algorithm.py  main.py  params.json
ShelfyTrainer/: Detector.cpp  Detector.h  main.cpp
ShelfyTrainer/data/: check.py  train.py
app/public/home/: index.html
app/public/home/css/: blocks.css
